--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
 venv/
 dataset/
 encodings.pickle
+firebase-config.json
+*.json
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+env/
+pip-log.txt
+pip-delete-this-directory.txt
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.log
+.git
+.mypy_cache
+.pytest_cache
+.hypothesis
